-- add support for LVM volumes
-- add support for consulting udev in addition to fstab when deciding if a system is system or not
-- add tcplay as an optional dependency to allow creation of truecrypt volumes
-- fix bug:truecrypt volumes with multiple ciphers did not close properly
-- fix bug:volumes did not close properly if mount point had a space character among others in it
-- feature added:users who are members of "zulumount-exec" group will have their volumes opened with "exec" mount option.
   This will allow them to be able to execute commands from the mount point.The default and recommended option is not mount with "noexec" option.
-- feature added:A "-M" option is added that will create a publicly accessible "mirror" of a mount point in "/run/share" from the private 
   original one created in "/run/media/$USER.This option is there to allow a user to mount a volume and have it accessible from other users of the system.
-- zuluMount-gui now adds and removed from its list as devices are added and removed from the system.A right click context menu option can be set to allow 
   unencrypted volumes to also be automounted.
-- add a command line option to zuluMount-gui to start it up without showing the GUI 

version 4.6.3
-- fix a build issue on some systems
-- when automounting devices,use device LABEL if present
-- its now possible to create truecrypt volumes using a keyfile
-- its now possible to open a truecrypt hidden volume
-- add explicit support md raid based volumes
-- add context menu entry in zuluMount-gui to open shared mount point folder
-- its now possible to initiate volume mounting process of volumes in files by drag and drop them on zuluCrypt-gui and zuluMount-gui UI.
-- various bug fixes.
-- add ability to create and open truecrypt hidden volumes in the GUI

version 4.6.4
-- fix a build issue on some systems

version 4.6.5
-- maintanance release