@@ -137,3 +137,4 @@ version 4.6.4
 
 version 4.6.5
 -- maintanance release
+-- add support for opening truecrypt system volumes
